Make misc text and layout fixes

--- a/content/ii-present-practice/12.md
+++ b/content/ii-present-practice/12.md
@@ -180,8 +180,8 @@ Metallized Reflective Mylar, Grabber Space Emergency Blanket, Recreational Equip
 
 Paraffin Wax, Reed Wax. https://reedwax.com
 
-Reflectix Double Reflective Insulation, Reflectix, Inc. https://www.reflectixinc.com
+Reflectix Double Reflective Insulation, Reflectix, Inc. [<span class="no-break-container">https://</span><wbr/>www.reflectixinc.com](https://www.reflectixinc.com)
 
 Silicone-Coated Mylar, TALAS. https://www.talasonline.com
 
-Titebond Premium Wood Glue, Franklin International. http://www.franklininternational.com
+Titebond Premium Wood Glue, Franklin International. [<span class="no-break-container">http://</span><wbr/>www.franklininternational.com](http://www.franklininternational.com)
