--- a/content/iii-open-questions/17.md
+++ b/content/iii-open-questions/17.md
@@ -34,12 +34,12 @@ contributor:
   - first_name: "W. Christian"
     last_name: "Petersen"
     title: "Volunteer Conservation Scientist and Affiliated Associate Professor"
-    affiliation: "Winterthur Museum, Garden & Library"
+    affiliation: "Winterthur Museum, Garden & Library, Winterthur, Delaware"
     sort_as: "6"
   - first_name: "Catherine"
     last_name: "Matsen"
     title: "Scientist and Affiliated Associate Professor"
-    affiliation: "Winterthur Museum, Garden & Library"
+    affiliation: "Winterthur Museum, Garden & Library, Winterthur, Delaware"
     sort_as: "7"
 abstract: "Paintings conservators at the Smithsonian American Art Museum survey conservation records to gather the historical recipes, treatment protocols, and materials used over the past fifty years to build a reference database connected to specific works in the collection. From this information, the authors show how the database is being used to re-create both historical wax-resin recipes and application techniques through lining mock-ups. This material reference set is being used for analytical and physical testing to learn more about the materials used and how they degrade, and what influences mechanical as well as environmental conditions have on both the lining recipes and reconstructions as they age."
 ---
