--- a/content/iv-case-studies/24.md
+++ b/content/iv-case-studies/24.md
@@ -2,7 +2,7 @@
 label: "24"
 title: "Working around *The Hours*"
 subtitle: "The Structural Treatment of a Twelve-Foot-Round Ceiling Painting by Edwin Austin Abbey"
-short_title: "Working Around *The Hours*"
+short_title: "Working around *The Hours*"
 layout: essay
 order: 240
 contributor:
@@ -74,7 +74,7 @@ Fifty-six looming strips, each 4 1/16 inches wide, were fabricated to be placed 
 
 The looming strips were attached while the painting was faceup. Strip placement was guided by the use of a cardboard template to ensure that the attached strips established a radial line of tension from the center of the painting outward ([fig. 24.3](#fig-24-3)). To minimize flexing of the canvas support and to avoid applying heat to the easily burnished paint film, a flexible silicone heating mat was assembled using a commercially available product and basic wiring. Wired to a standard plug and connected to a rheostat for regulating the temperature, the mat could be slipped underneath the painting and looming strip to activate the Beva adhesive. The temperature of the mat and the surface of the painting were monitored with an infrared noncontact thermometer, and the rheostat could be adjusted accordingly. During Beva activation from the back of the painting, a metal plate cushioned with Volara and wrapped with Marvelseal was used to apply gentle pressure from the front and reflect heat back toward the painting. After the Beva was activated, the strips were cooled under a cushioned metal plate and weights.
 
-{% figure 'fig-24-3' %}
+{% figure 'fig-24-3' 'pdf-float-top' %}
 
 The looming strips were attached 2 inches in from the tacking edge, over the tacking edge, and 2 inches past the tacking edge. The strips were not attached to the full length of the wide fold-over edges, as this was deemed unnecessary and some areas of canvas shrinkage prevented it. Rare earth magnets, cushioned with blotter and wrapped in Tyvek for easier removal, were used to prevent flexing of the unattached tacking margins when the painting was placed upright.
 
