--- a/content/v-adhesives/29.md
+++ b/content/v-adhesives/29.md
@@ -47,7 +47,7 @@ The general motivation and procedure, up to the presentation of the individual b
 
 Depending on the bonding technique and state of degradation, different adhesives are suitable. To achieve the best possible bonding, the adhesive application method must be chosen wisely and individually for each painting.
 
-### Adhesive requirements
+### Adhesive Requirements
 
 The general profile of requirements for adhesives used in tear mending is very complex and appears to be somewhat contradictory.[^4] In particular, the different adhesion properties of adhesives for fabrics based on plant fibers (e.g., linen, cotton) and fabrics produced from synthetic fibers (e.g., polyester, polyamide) need to be taken into account. Other individual surface properties caused by, for example, impregnation from former linings or glue residues due to removed patches also influence the adhesion. However, the general criteria for an ideal adhesive can be summarized as follows:
 
@@ -107,7 +107,7 @@ The following four water-based adhesives are some of the most promising on the b
 
 {% figure 'table-29-1' 'pdf-float-top' %}
 
-### Experimental setup
+### Experimental Setup
 
 These four adhesives have been repeatedly tested over the past years.[^15] The adhesives were examined in the four different bonding situations shown in [figure 29.1](#fig-29-1):
 
