--- a/content/vi-interventions/37.md
+++ b/content/vi-interventions/37.md
@@ -78,7 +78,7 @@ The control console is a unit composed of a PID (proportional-integral-derivativ
 
  The first prototype heater was adopted from existing industrial technology in 2003 and manufactured for use in the lining treatment of two large-format New Deal murals by Howard S. Sewell in Oregon City, Oregon. The silicone heating mat was made with wound copper and fiberglass resistance wire elements plotted in a dense linear pattern at 1/4-inch intervals. It was custom made to accommodate the height of the murals. The relining process also employed a Dartek vacuum envelope with two outflowing points connected to a Gast vacuum pump. The mural sections were bonded with a Beva interleaf to the backing by heating them in sections, positioning the thermocouple between the heating mat and the backing surface. The portability of the mat allowed all of the work to be conducted on site ({% cite 'Olsson and Markevicius 2010' %}).
 
-### IMAT: Innovation using Carbon Nanotubes
+### IMAT: Innovation Using Carbon Nanotubes
 
 In 2010, the authors first proposed using carbon nanotubes for precision heat transfer in art conservation ({% cite 'Markevicius et al. 2011' %}). From 2011 to 2014, the European Commission’s IMAT Project (Intelligent Mobile Multipurpose Accurate Thermo-Electrical Device[^1]), coordinated by the University of Florence, considerably refined the design of flexible heating laminates for art conservation. The IMAT mats were created with innovative e-textiles woven with integrated yarns coated with CNTs, as heating elements. Various prototypes were developed, including a transparent mat and a breathable version that allowed for permeability when humidity was used during treatment. The significant advantages of using CNTs lie in their ultra-low mass and extremely high electrical and thermal conductivity, which allows rapid thermal response (essential for accuracy) and safe, ultra-low voltage (36V). The project's final deliverable was proof-of-concept IMAT prototypes, which continue to be used for diverse conservation and research projects. As of this writing, the project is awaiting further investment for upscaling and production for use in bench practice (as shown in [fig. 37.2](#fig-37-2)). 
 
