--- a/content/iv-case-studies/22.md
+++ b/content/iv-case-studies/22.md
@@ -18,7 +18,7 @@ abstract: An important recent acquisition to the collection of the National Gall
 
 In July 2018, the National Gallery, London, acquired a self-portrait by the Italian Baroque artist Artemisia Gentileschi, one of only a handful of works by female painters in the collection and the first painting by this artist to be represented at the gallery. The painting, *Self-Portrait as Saint Catherine of Alexandria* (ca. 1615–17), depicts the artist herself as Saint Catherine of Alexandria, the Christian saint martyred in the early fourth century ([fig. 22.1](#fig-22-1)). Her right hand holds the martyr’s palm close to her chest, while she rests her left hand on a broken wheel with iron spikes, the instrument of Catherine’s torture and the saint’s standard attribute. The painting dates from Gentileschi’s period of activity in Florence, where she lived and worked from 1613 to 1620, establishing herself as an independent artist and becoming the first woman to gain membership to the Accademia della Arti del Disegno, in 1616 ({% cite 'Bissell 1968' '154' %}; {% cite 'Bissell 1999' '141' %}; {% cite 'Whitlum-Cooper et al. 2019' %}).
 
-{% figure 'fig-22-1' %}
+{% figure 'fig-22-1' 'pdf-float-top' %}
 
 Upon acquisition, the canvas painting was treated in the National Gallery conservation department, where the decision was made to reline the painting and to clean and restore the image. The entire treatment was filmed for the National Gallery’s website and made available on YouTube as part of the gallery’s public engagement program.[^1] Conservation was led by Larry Keith (chief restorer and keeper), and the structural treatment was undertaken by Paul Ackroyd (senior restorer) and the author.[^2]
 
@@ -40,7 +40,7 @@ Traditional aqueous glue-paste hand-lining remains part of the conservation depa
 
 The gallery’s current technique is also distinct from other traditional methods in that natural beeswax is used in the process: as part of the facing adhesive, as a lubricant during the lining phase, and as a moisture barrier applied after lining ({% cite 'Phenix 1995' '26' %}). A cold wax-resin facing adhesive is used at the gallery for paintings that do not have absorbent ground or paint layers. It is made with dammar resin, beeswax, and mineral spirit (a low-aromatic petroleum-based solvent) and is brushed out thinly onto the painted surface as a cold liquid over a paper tissue facing ([fig. 22.3](#fig-22-3)), usually over a temporary varnish (see the appendix for the recipe).
 
-{% figure 'fig-22-3' %}
+{% figure 'fig-22-3' 'pdf-float-top'%}
 
 There are distinct advantages to using a wax-resin facing as part of the glue-paste lining methodology. It becomes semitransparent during ironing and can be easily removed with mineral spirit during the lining process, allowing the painting’s surface to be visibly inspected without disturbing the lining adhesive. This cannot be done, for example, with an aqueous adhesive facing. Cold wax-resin facings are also simple to apply and pose minimal risk of dimensional change to the painting or of any potential for inducing shrinkage (of either the painting or the facing tissue). They create a weak but effective bond to protect the painted surface from accidental abrasion during delining and provide a soft, slightly cushioning surface. They can also be applied over other facings if additional protection is necessary.
 
