Update title with correct BEVA capitalization

--- a/content/viii-posters/44.md
+++ b/content/viii-posters/44.md
@@ -1,7 +1,7 @@
 ---
 label: "44"
-title: "A Method for Remounting Lined Paintings Using BEVA 371 Film"
-short_title: "Remounting Lined Paintings Using BEVA 371 Film"
+title: "A Method for Remounting Lined Paintings Using Beva 371 Film"
+short_title: "Remounting Lined Paintings Using Beva 371 Film"
 layout: essay
 order: 440
 contributor:
