Fix shortcode error

--- a/content/ii-present-practice/11.md
+++ b/content/ii-present-practice/11.md
@@ -101,7 +101,7 @@ The adhesion of new canvas was carried out in a vacuum bag (envelope), with the 
 
 Not all the losses were filled and retouched because the art historian who directed the conservation treatment chose to leave a historical memory of the flood of Florence. When the treatment was finished, the painting was exhibited at the Medici Chapels in Florence ([fig. 11.6](#fig-11-6)).
 
-{% figure 'fig-11-6 pdf-float-top' %}
+{% figure 'fig-11-6' 'pdf-float-top' %}
 
 ## Conclusion
 
