Fix bad link markup

--- a/content/viii-posters/49.md
+++ b/content/viii-posters/49.md
@@ -137,7 +137,7 @@ To better understand whether solvents play a role in increasing the porous netwo
 
 {% endbackmatter %}
 
-[^1]: See [https://evolon.freudenberg-pm.com/evolon_technology/technology](about:blank).
+[^1]: See https://evolon.freudenberg-pm.com/evolon_technology/technology.
 
 [^2]: Data for the five-minute time point are the average of the triplicate run from the Single-Layer experiment in the Single- versus Double-Layer Application portion of the study. Note that the data for the one-minute and fifteen-minute time points are single runs (not an average).
 
