Fix callout links to figure groups

--- a/content/i-history/5.md
+++ b/content/i-history/5.md
@@ -33,7 +33,7 @@ One of these craftsmen was Giuseppe Maria Ranzenò, known as il Filosofo (the Ph
 
 Other testimonies regarding the activity of the Arazzeria between 1761 and 1768 clarify the specificity of Ranzenò's profession. This information is found in a collection of documents published in 1979 as part of a campaign of wide-ranging research aimed at reconstructing the various and multifaceted artistic activities of the eighteenth century, thanks to a group of historians whose scholarship would come together to give rise to the great *Civiltà del Settecento a Napoli* exhibition in Naples (December 1979–October 1980) ({% cite 'Catalano and Prisco 2003' %}; {% cite 'N. Spinosa 1979' %}).
 
-In the Reale Arazzeria, several painters, including Girolamo Storace, Giuseppe Bonito, and Orlando Filippini, were engaged to create oil paintings that served as a guide to tapestry weaving ([fig. 5.1](#fig-5-1)). Ranzenò supplied them with prepared canvases on which to make their models, and for this reason in the documents he is called “*mesticatore*” ({% cite 'Siniscalco 1979' '282' %}), from *mestica*, the mixture with which the canvases were prepared for painting. But we also find him at work in other activities closely related to those of the painters active for the Arazzeria, which he assisted with all aspects relating to the preparation of the supports.
+In the Reale Arazzeria, several painters, including Girolamo Storace, Giuseppe Bonito, and Orlando Filippini, were engaged to create oil paintings that served as a guide to tapestry weaving ([fig. 5.1](#fig-5-1-a)). Ranzenò supplied them with prepared canvases on which to make their models, and for this reason in the documents he is called “*mesticatore*” ({% cite 'Siniscalco 1979' '282' %}), from *mestica*, the mixture with which the canvases were prepared for painting. But we also find him at work in other activities closely related to those of the painters active for the Arazzeria, which he assisted with all aspects relating to the preparation of the supports.
 
 {% figuregroup '2' 'fig-5-1-a, fig-5-1-b' '<span class="q-figure__label">Figure 5.1</span> (a) Pietro Duranti (Italian, 1710–1791, *Allegoria dell’Aurora*, ca. 1768. Tapestry. (b) Giuseppe Bonito (Italian, 1707–1789), *Allegoria dell’Aurora* (model for tapestry), ca. 1768. Oil on canvas, 220 × 139 cm (86 3/5 × 54 3/4 in.). Images: (a) Napoli, Palazzo Reale; (b) Caserta, Palazzo Reale' %}
 
@@ -127,7 +127,7 @@ Another important aspect of the caution shown by the museum administration conce
 
 The practice of transfer was carried out very early in Naples, since at least the eighteenth century. In 1742, Bernardo De Dominici recounted the skill of two Neapolitan artists, Nicolò di Simone and Alessandro Majello, who specialized in the transfer of flaking paintings on panel onto canvas supports ({% cite 'De Dominici (1742–43) 2003–14' '796, 994' 'De Dominici [1742–43] 2003–14' %}, cited in {% cite 'Conti 2007' '140' %}).
 
-The restoration of a painting by Fedele Fischetti, *Noli me tangere*, from the Church of Santa Caterina da Siena ([fig. 5.7a](#fig-5-7)), in 1998,[^13] enabled us to examine a material example of a partial transfer procedure, probably carried out by the artist himself during the execution of the painting, which can be traced back to 1766–67. There are documents that refer to Fischetti’s activity as a restorer ({% cite 'Nappi 1984' '320' %}), but in this case it was possible to verify the procedure carried out long ago directly on a painting.
+The restoration of a painting by Fedele Fischetti, *Noli me tangere*, from the Church of Santa Caterina da Siena ([fig. 5.7a](#fig-5-7-a)), in 1998,[^13] enabled us to examine a material example of a partial transfer procedure, probably carried out by the artist himself during the execution of the painting, which can be traced back to 1766–67. There are documents that refer to Fischetti’s activity as a restorer ({% cite 'Nappi 1984' '320' %}), but in this case it was possible to verify the procedure carried out long ago directly on a painting.
 
 {% figuregroup '2' 'fig-5-7-a, fig-5-7-b' '<span class="q-figure__label">Figure 5.7</span> (a) Fedele Fischetti (Italian, 1732–1792), *Noli me tangere*. Oil on canvas, 355 × 182 cm (139 3/4 × 71 5/8 in.), from the Church of Santa Caterina da Siena, Napoli (1766–67). (b) Diagram showing the boundary line between the lower part, which retains the original canvas, and the upper part, which has undergone the partial transfer (in black) and the areas affected by old “integrations” (in green). Image: (a) Ministero dell’Interno, Fondo Edifici di Culto (F.E.C.); (b) Museo di Capodimonte, Centro Documentazione Restauro' 'pdf-float-top' %}
 
@@ -137,7 +137,7 @@ The painting appeared to have been lined a long time ago, and the adhesion of th
 
 Evidently—probably following an accident—the painter needed to restore his own painting, which was adhering poorly to the canvas. He then removed the canvas from the affected part and glued to it a new canvas of a very similar weave to the original, while throughout the lower part he continued gluing over the earlier canvas where it had not been necessary to remove it.
 
-The fact that the intervention was carried out by the artist himself is deduced from the nature of the canvas and from the fact that the gaps in the upper part are filled with an oily mixture quite similar to the original, applied from the back—underneath the lining canvas—and the color applied on the front over these fillings is similar to the original in the handling of the brushstrokes and color scheme, but slightly obscured in these areas. [Figure 5.7b](#fig-5-7) shows the areas affected by these “integrations.”
+The fact that the intervention was carried out by the artist himself is deduced from the nature of the canvas and from the fact that the gaps in the upper part are filled with an oily mixture quite similar to the original, applied from the back—underneath the lining canvas—and the color applied on the front over these fillings is similar to the original in the handling of the brushstrokes and color scheme, but slightly obscured in these areas. [Figure 5.7b](#fig-5-7-b) shows the areas affected by these “integrations.”
 
 The practice of transfer—often claimed by restorers to be a secret capable of saving deteriorated paintings—causes more problems than it solves, as is now well understood. Although in the nineteenth century it was banned during restoration at the Real Museo Borbonico, it was unfortunately no longer avoided in the early twentieth century. In the years leading up to the 1960s, the transfer of easel paintings was considered a way of giving paintings greater durability (much like the *strappo* technique used with frescoes), so much so that it was also approved by rigorous ministerial circulars, and indeed it was practiced repeatedly, with questionable results. If the operation could have been carried out without very serious consequences for Neapolitan seventeenth-century paintings, which are characterized by remarkably thick and compact preparatory layers (although even there it actually impoverished the paint layer and its texture), in other cases the consequences of these interventions were truly deleterious. This was the case with Titian’s *Paolo III col camauro.* Titian famously painted directly onto lightly prepared canvas, and *Paolo III* was seriously damaged by the transfer carried out by Stanislao Troiano in 1932 ({% cite 'Cerasuolo 2013' '197' %}).
 
