--- a/content/viii-posters/48.md
+++ b/content/viii-posters/48.md
@@ -80,7 +80,7 @@ Removal of beeswax from the canvas was done using the first method described in 
 
 {% figure 'fig-48-3' %}
 
-This procedure allowed 5% sturgeon glue to be used to consolidate the paint layer and ground. The tear was then mended thread-by-thread with a 5% solution of polyvinyl butyral (PVB) in isopropanol (with a high degree of purity) ([fig. 48.4](#fig-48-4)). On the reverse, the tear area was reinforced with additional threads taken from the canvas edges to further secure the area during stretching on a new stretcher.
+This procedure allowed 5% sturgeon glue to be used to consolidate the paint layer and ground. The tear was then mended thread-by-thread with a 5% solution of polyvinyl butyral (PVB) in isopropanol (with a high degree of purity) ([fig. 48.4](#fig-48-4-a)). On the reverse, the tear area was reinforced with additional threads taken from the canvas edges to further secure the area during stretching on a new stretcher.
 
 {% figuregroup '2' 'fig-48-4-a, fig-48-4-b' '<span class="q-figure__label">Figure 48.4</span> The tear area after removal of beeswax and overpaint followed by thread-by-thread mending with a 5% solution of polyvinyl butyral. (a) Front of painting. (b) Reverse of painting, showing threads from canvas edges added for reinforcement. Images: Department of Scientific Conservation of Oil Paintings, State Research Institute for Restoration (GOSNIIR) / Photo: Anton Mikhailov' 'pdf-two-column pdf-float-top' %}
 
