--- a/content/viii-posters/49.md
+++ b/content/viii-posters/49.md
@@ -103,7 +103,7 @@ In addition to assessing the efficacy of wax-resin poulticing through weight gai
 
 {% figure 'fig-49-3' %}
 
-SEM images ([fig. 49.4](#fig-49-4)) visualized morphology changes on the surface. With each use, the individual fibers become increasingly less distinct, presumably as the wax resin coats and fills the pores. The loss of definition with each use could be attributed to redistribution of the wax resin already poulticed into the tissue upon re-exposure to solvent, the continued filling of tissue interstices with freshly solubilized/softened wax resin, or a combination of both.
+SEM images ([fig. 49.4](#fig-49-4-a)) visualized morphology changes on the surface. With each use, the individual fibers become increasingly less distinct, presumably as the wax resin coats and fills the pores. The loss of definition with each use could be attributed to redistribution of the wax resin already poulticed into the tissue upon re-exposure to solvent, the continued filling of tissue interstices with freshly solubilized/softened wax resin, or a combination of both.
 
 {% figuregroup '2' 'fig-49-4-a, fig-49-4-b, fig-49-4-c, fig-49-4-d' '<span class="q-figure__label">Figure 49.4</span> SEM BSE images of unused tissue: (a) control, (b) after iteration 1, &#40;c) after iteration 2, (d) after iteration 3. (Surface morphology changes visualized in SEM BSE images captured at 137× by Dr. Judy Rudolph, volunteer conservation scientist, SRAL, Winterthur Museum. Images: Julianna Ly' %}
 
