--- a/content/viii-posters/51.md
+++ b/content/viii-posters/51.md
@@ -95,7 +95,7 @@ Results ([table 51.3](#table-51-3)) evidenced the influence of lining materials 
 
 {% figure 'fig-51-3' 'pdf-two-column' %}
 
-Results evidenced that biodegradation is governed by the flour milling and flour-glue ratio, and by the nature of the starch and protein when the flour-glue ratio is kept constant. Mold growth and pest infestation tests evidenced that glue-paste linings containing semiwhole flours are more sensitive to RH than those made from fine-milled white flours—meaning a greater tendency toward biodeterioration at high RH. Again, the weave geometry of the lining canvas influences the results ([fig. 51.4](#fig-51-4)). Close-weave and open-weave canvases are both affected by biodeterioration; open weave-canvases seem to be more prone to contamination by mold but slightly less vulnerable to degradation by insects. Concerning mold, the second layer of glue paste applied from the reverse after the laying on of the lining canvas can act as a better hydrophilic substrate for mold growth. A possible explanation for less infestation is that *Stegobium paniceum* is a lucifugous insect, so the exposure to light caused by open-weave interstices can disrupt the act of laying eggs.
+Results evidenced that biodegradation is governed by the flour milling and flour-glue ratio, and by the nature of the starch and protein when the flour-glue ratio is kept constant. Mold growth and pest infestation tests evidenced that glue-paste linings containing semiwhole flours are more sensitive to RH than those made from fine-milled white flours—meaning a greater tendency toward biodeterioration at high RH. Again, the weave geometry of the lining canvas influences the results ([fig. 51.4](#fig-51-4-a)). Close-weave and open-weave canvases are both affected by biodeterioration; open weave-canvases seem to be more prone to contamination by mold but slightly less vulnerable to degradation by insects. Concerning mold, the second layer of glue paste applied from the reverse after the laying on of the lining canvas can act as a better hydrophilic substrate for mold growth. A possible explanation for less infestation is that *Stegobium paniceum* is a lucifugous insect, so the exposure to light caused by open-weave interstices can disrupt the act of laying eggs.
 
 {% figuregroup '2' 'fig-51-4-a, fig-51-4-b, fig-51-4-c, fig-51-4-d' '<span class="q-figure__label">Figure 51.4</span> Detail of microbiological study. Binocular examination of contaminated samples at the end of the test (25× magnification), showing spores and mycelium of mold species that have contaminated the samples. (a) Rye T70, open-weave fabric. (b) Wheat T80, close-weave fabric. &#40;c) and (d) TK. Image: Courtesy of the research team' %}
 
